# kdeplasma-addons

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/bball/: bball.cpp
applets/binary-clock/: binaryclock.cpp
applets/blackboard/: blackboardwidget.cpp
applets/bubblemon/src/: bubble.cpp
applets/comic/: CMakeLists.txt  comic.cpp  comicarchivejob.cpp  comicsaver.cpp  comicsaver.h  configwidget.cpp  configwidget.h
applets/community/: CMakeLists.txt
applets/dict/: CMakeLists.txt
applets/eyes/: eyes.cpp
applets/fifteenPuzzle/src/: fifteen.cpp  fifteenPuzzle.cpp
applets/fileWatcher/: fileWatcher.cpp
applets/frame/: CMakeLists.txt  frame.cpp  imageloader.cpp
applets/fuzzy-clock/: fuzzyClock.cpp
applets/icontasks/: abstracttaskitem.cpp  dockconfig.cpp  dockmanager.cpp  taskgroupitem.cpp  taskitemlayout.cpp  tasks.cpp  unity.cpp
applets/icontasks/tooltips/: tooltipcontent.cpp  tooltipmanager.cpp  windowpreview.cpp
applets/incomingmsg/: CMakeLists.txt
applets/kdeobservatory/: CMakeLists.txt
applets/kdeobservatory/src/: krazyreportview.cpp
applets/kimpanel/backend/ibus/: CMakeLists.txt
applets/kimpanel/backend/scim/: CMakeLists.txt
applets/kimpanel/src/: icongridlayout.cpp  kimpanelinputpanel.cpp  kimpanelinputpanelgraphics.cpp
applets/kolourpicker/: kolourpicker.cpp
applets/lancelot/launcher/: LancelotApplet.cpp
applets/lancelot/parts/: LancelotPart.cpp
applets/leavenote/: CMakeLists.txt
applets/life/: life.cpp
applets/magnifique/: magnifique.cpp
applets/mediaplayer/: CMakeLists.txt  mediaplayer.cpp
applets/mediaplayer/dbus/: tracklistdbushandler.cpp
applets/microblog/: microblog.cpp
applets/news/: CMakeLists.txt
applets/notes/: notes.cpp  textedit.cpp
applets/paste/: pastemacroexpander.cpp  pastemacroexpander.h
applets/pastebin/: CMakeLists.txt  pastebin.cpp  pastebin.h
applets/plasmaboard/: AlphaNumKey.cpp  CapsKey.cpp  EnterKey.cpp  FuncKey.cpp  Helpers_x11.cpp  Layout.cpp  PanelIcon.cpp  ShiftKey.cpp  TabKey.cpp  tooltip.cpp
applets/previewer/: CMakeLists.txt  previewwidget.cpp  previewwidget.h
applets/rememberthemilk/: CMakeLists.txt  authenticate.ui
applets/rssnow/: scroller.cpp  single-feed.cpp
applets/showdashboard/: showdashboard.cpp
applets/showdesktop/: showdesktop.cpp
applets/systemloadviewer/: systemloadviewer.cpp
applets/timer/: timer.cpp  timer.h
applets/weather/: CMakeLists.txt
applets/weatherstation/: CMakeLists.txt
applets/webslice/: CMakeLists.txt
applets/webslice/plasma/: CMakeLists.txt
cmake/: FindQJSON.cmake
containments/groupingdesktop/lib/: abstractgroup.cpp  freehandle.cpp
containments/groupingdesktop/lib/groupexplorer/: explorerwindow.cpp  groupicon.cpp
containments/groupingdesktop/lib/groups/: flowgroup.cpp
dataengines/: CMakeLists.txt
dataengines/comic/: CMakeLists.txt  cachedprovider.cpp  comicproviderwrapper.cpp
dataengines/kdecommits/: CMakeLists.txt
dataengines/kdeobservatory/: CMakeLists.txt
dataengines/kdeobservatory/src/: kdeobservatoryservice.cpp
dataengines/microblog/: CMakeLists.txt
dataengines/ocs/: CMakeLists.txt
dataengines/potd/: CMakeLists.txt
dataengines/rememberthemilk/: CMakeLists.txt
libs/: CMakeLists.txt
libs/lancelot/: Global.cpp
libs/lancelot-datamodels/: CMakeLists.txt  MessagesKmail.cpp  MessagesKmail_p.h  Runner.cpp
libs/lancelot/layouts/: ColumnLayout.cpp  FullBorderLayout.cpp  NodeLayout.cpp
libs/lancelot/widgets/: ActionListView.cpp  BasicWidget.cpp  ExtenderButton.cpp  PassagewayView.cpp  ScrollPane.cpp  kineticscroll.cpp
libs/plasmaweather/: CMakeLists.txt  weatherconfig.cpp  weatherconfig.h
libs/rtm/: CMakeLists.txt
libs/rtm/tests/: CMakeLists.txt  loginwidget.cpp
runners/: CMakeLists.txt
runners/audioplayercontrol/: CMakeLists.txt  audioplayercontrolrunner.cpp
runners/characters/: CMakeLists.txt  charrunner.cpp
runners/contacts/: imageiconengine.cpp  imageiconengine.h
runners/dictionary/: dictionarymatchengine.cpp
runners/events/: CMakeLists.txt
runners/katesessions/: katesessions.cpp
runners/spellchecker/: CMakeLists.txt
wallpapers/: CMakeLists.txt
wallpapers/mandelbrot/: CMakeLists.txt  global.h  mandelbrot.cpp  mix.cpp  render_impl.cpp  renderthread.cpp
wallpapers/marble/: marble.cpp
wallpapers/pattern/: backgrounddelegate.cpp
wallpapers/qmlwallpapers/: CMakeLists.txt  wallpapersmodel.cpp  wallpapersqml.cpp
wallpapers/virus/: CMakeLists.txt  alife.cpp  backgrounddelegate.cpp  virus.cpp  virus.h
wallpapers/weather/: CMakeLists.txt  backgrounddelegate.cpp  weatherAdvanced.ui  weatherwallpaper.cpp  weatherwallpaper.h
